<resources>
    <string name="app_name">Dream_Cookery</string>
    <string name="hello">Hello</string>
    <string name="western_text">WESTERN</string>
    <string name="malaysian_text">MALAYSIAN</string>
    <string name="chinese_text">CHINESE</string>
    <string name="dessert_text">DESSERT</string>
    <string name="main_class_text">MAIN</string>

    <string name="edit">Edit</string>
    <string name="connect_to_phone">Connect to phone</string>
    <string name="current_bill">Current Bill</string>
    <string name="purchase_history">Purchase History</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="faq">FAQ</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">HOME</string>
    <string name="about_us">About Us</string>

    <string name="log_in_text">Log in</string>
    <string name="password_hint">Password</string>
    <string name="forget_password_text">Forget password?</string>
    <string name="register_text">New user? Click here to register new account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="class_schedule">CLASS SCHEDULE</string>
    <string name="profile">PROFILE</string>
    <string name="setting">SETTING</string>
    <string name="payment_method">Payment Method</string>

    <string name="facebook_link">Dream Cookery.</string>
    <string name="email_link">dreamcookery@gmail.com</string>
    <string name="phonoNo_link">Call Us 012–3456789</string>
    <string name="feedback_text">Call us for any feedback</string>
    <string name="about_us_desc">During the MCO, in order to let everyone not always play mobile phones or watch TV at home. During this period, my team and I developed an app called DREAM COOKERY. This is an app to teach people how to cook. We have developed online teaching to pass the people\'s time</string>

    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_mail">Email Address</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_gender">Gender</string>
    <string name="select_date">Date</string>
    <string name="editProfileDetail">edit</string>
    <string name="edit_profile_birthday">Birthday</string>
    <string name="save">save</string>
    <string name="edit_button">Edit</string>
    <string name="classinfo_nameText">Name</string>
    <string name="Text_Description">Description</string>
    <string name="Text_TimeSlot">Time Slot</string>
    <string name="Text_firstTimeSlot">MON 13/7/2020 1:00PM</string>
    <string name="Text_secondTimeSlot">TUE 14/7/2020 1:00PM</string>
    <string name="Text_thirdTimeSlot">WED 15/7/2020 1:00PM</string>
    <string name="Text_fourthTimeSlot">THU 16/7/2020 1:00PM</string>
    <string name="Text_Subtitle">ENGLISH</string>
    <string name="Text_Subtitle2">MALAY</string>
    <string name="Text_Subtitle3">CHINESE</string>
    <string name="Text_InsName">Instructor Name</string>
    <string name="Text_Price">Price</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="name_on_card">Name On Card</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="expired_date">Expired Date</string>
    <string name="cvv">CVV</string>
    <string name="name">Name</string>
    <string name="mm_yyyy">MM/YY</string>
    <string name="xxx">XXX</string>
    <string name="xxxx_xxx_xxxx_xxxx">xxxx-xxx-xxxx-xxxx</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="choose_a_payment_method_to_complete_payment">Choose a payment method to complete payment</string>
    <string name="successful_created">Successful Created</string>
    <string name="back">Back</string>
    <string name="back_to_home">Back to Home</string>
    <string name="thank_you_for_your_purchase">Thank you for your purchase</string>
    <string name="your_purchase_has_been_recorded">Your purchase has been recorded</string>
    <string name="please_check_your_email_for_your_e_reciept">Please check your email for your e-reciept.</string>



</resources>