<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20sp"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/backEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/abc_vector_test" />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:hint="@string/edit_profile_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="12sp"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="12sp" />


    <EditText
        android:id="@+id/profile_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:background="@drawable/box"
        android:hint="@string/edit_profile_phone"
        android:inputType="phone"
        android:maxLines="1"
        android:padding="12sp"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/select_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/profile_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12sp"
            android:textSize="12sp"
            android:background="@drawable/box"
            android:hint="@string/edit_profile_birthday"
            android:textColor="#000000"
            android:layout_marginTop="5sp"
            android:singleLine="true" />
        <Button
            android:id="@+id/profile_birth_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:textColor="@color/white"
            android:text="@string/select_date"
            android:background="@color/colorPrimaryDark"
            android:layout_weight="3"/>


    </LinearLayout>

    <Spinner
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:background="@drawable/box"
        android:hint="@string/edit_profile_gender"
        android:maxLines="1"
        android:padding="12sp"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="12sp" />

    <Button
        android:id="@+id/save_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:background="@color/colorPrimaryDark"
        android:padding="12sp"
        android:onClick="BackToProfile"
        android:text="@string/save"
        android:textColor="@color/white" />


</LinearLayout>