<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassInfoOverview">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/classInfoID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ID"
            android:visibility="gone" />

        <TextView
            android:id="@+id/classInfoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="Name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/classInfoImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/classInfoName" />

        <TextView
            android:id="@+id/Text_Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/Text_Description"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/classInfoImage" />

        <TextView
            android:id="@+id/classInfoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Text_Description" />

        <TextView
            android:id="@+id/Text_InsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/Text_InsName"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/classInfoDescription" />

        <TextView
            android:id="@+id/classInfoInsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Text_InsName" />

        <TextView
            android:id="@+id/Text_Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/Text_Price"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/classInfoInsName" />

        <TextView
            android:id="@+id/classInfoPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Text_Price" />

        <TextView
            android:id="@+id/classInfoTimeSlot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/Text_TimeSlot"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/classInfoPrice" />



        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/classInfoTimeSlot">

            <RadioButton
                android:id="@+id/firstTimeSlot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_firstTimeSlot" />

            <RadioButton
                android:id="@+id/secondTimeSlot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Text_secondTimeSlot" />

            <RadioButton
                android:id="@+id/thirdTimeSlot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Text_thirdTimeSlot" />

            <RadioButton
                android:id="@+id/fourthTimeSlot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Text_fourthTimeSlot" />


        </RadioGroup>

        <TextView
            android:id="@+id/classInfoSubtitleLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="Subtitle Language"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourthTimeSlot" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/classInfoSubtitleLanguage">

            <RadioButton
                android:id="@+id/firstSubtitleLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_Subtitle" />

            <RadioButton
                android:id="@+id/secondSubtitleLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Text_Subtitle2" />

            <RadioButton
                android:id="@+id/thirdSubtitleLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_Subtitle3" />

        </RadioGroup>

        <Button
            android:id="@+id/button_purchaseSlot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:onClick="onPurchaseSlot"
            android:text="Purchase Slot">

        </Button>

    </LinearLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>