<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainClassView"
    android:background="@drawable/splash_screen">

    <TextView
        android:id="@+id/class_type_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/main_class_text"
        android:textSize="30sp"
        app:fontFamily="@font/modern_antiqua"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4D8C8C8C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/western_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="48dp"
                android:paddingRight="48dp"
                android:text="@string/western_text"
                android:textSize="24sp"
                app:fontFamily="serif"
                android:onClick="WesternClass"/>

            <TextView
                android:id="@+id/malaysian_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="48dp"
                android:paddingRight="48dp"
                android:text="@string/malaysian_text"
                android:textSize="24sp"
                app:fontFamily="serif" />

            <TextView
                android:id="@+id/chinese_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="48dp"
                android:paddingRight="48dp"
                android:text="@string/chinese_text"
                android:textSize="24sp"
                app:fontFamily="serif" />

            <TextView
                android:id="@+id/dessert_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="48dp"
                android:paddingRight="48dp"
                android:text="@string/dessert_text"
                android:textSize="24sp"
                app:fontFamily="serif" />


        </LinearLayout>

    </HorizontalScrollView>

    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="65dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_menu_24" />

    <FrameLayout
        android:id="@+id/flFragment"
        android:name="com.example.dream_cookery.MenuFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/class_type_main" />

</androidx.constraintlayout.widget.ConstraintLayout>

